-
Bug
-
Resolution: Fixed
-
Medium
-
Upstream
-
None
-
3
-
9223372036854775807
The following steps can reproduce the dmesg error on Rockylinux10.1:
# mount.lustre XXX.XXX.XXX.XXX@tcp:/test /mnt/test/ # umount /mnt/test/
[449857.792313] Lustre: Mounted test-client [449861.185976] LustreError: 281843:0:(lov_obd.c:780:lov_cleanup()) test-clilov-ff45ff4eca88c800: lov tgt 0 not cleaned! deathrow=0, lovrc=1 [449861.209983] Lustre: Unmounted test-client
- is related to
-
LU-19756 WARNING: CPU: 2 PID: 9729 at mm/page-writeback.c:2796 __folio_mark_dirty+0x208/0x260
-
- Open
-