LU-19865 lov: Bypass LU device free before disconnect

lov_cleanup() included by lov_device_free() should be called after
disconnect so avoid calling lov_device_free() before disconnect.
Try to fix the following dmesg error:

    # mount.lustre XXX.XXX.XXX.XXX@tcp:/test /mnt/test
    # umount /mnt/test
    # dmesg
     ...
     LustreError: 281843:0:(lov_obd.c:780:lov_cleanup())
      test-clilov-ff45ff4eca88c800: lov tgt 0 not cleaned!
      deathrow=0, lovrc=1

Fixes: 6a06834a3f2b ("LU-18162 lov: convert Logical Object Volume to LU device")
Signed-off-by: Xiao Yang <xyang@ddn.com>
Change-Id: I91adc0624f96c0957a425c29030c4d49038ea31b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/63975
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>